--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>  <title>Amberdesign.com</title>
+<head>  
+    <title>Amberdesign.com</title>
         <meta charset="UTF-8">
 
 		<meta name="viewport" content="width=1100"/>
@@ -34,94 +35,379 @@
     	<script src="js/scripts.js"></script>
 
 <div id="backgrounddiv">
-	<img class="backgroundimg" src="images/home_low_res.jpg" data-imagefade="images/home.jpg" />
+    <img class="backgroundimg" src="images/home_low_res.jpg" alt="amber-portfolio" data-imagefade="images/home.jpg">
 </div>
+
 
 <div id="backgroundhover"></div>
 <div id="overlay"></div>
 
-<div id="navl"><div id = "nav-left"><div id = "left-arrow"><img src="images/pijltje-links.png" border="0"></div></div></div>
-<div id="navr"><div id = "nav-right"><div id= "right-arrow"><img src="images/pijltje-rechts.png" border="0"></div></div></div>
+
+<div id="navl">
+    <div id="nav-left">
+        <div id="left-arrow">
+            <img src="images/pijltje-links.png" border="0" alt="links">
+        </div>
+    </div>
+</div>
+<div id="navr">
+    <div id="nav-right">
+        <div id="right-arrow">
+            <img src="images/pijltje-rechts.png" border="0" alt="rechts">
+        </div>
+    </div>
+</div>
+
 
 
 <div id="about">
-	<div class="abouttitle">
-		<h2>about&nbsp; me</h2>
-	</div>
-	<div class="aboutcontent">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam orci risus, volutpat et aliquam non, adipiscing vel velit.
-		Sed dignissim lorem id eros tincidunt nec egestas leo pellentesque. Vestibulum tempor magna id lacus sagittis at hendrerit mi dapibus. 
-		Cras cursus viverra arcu quis luctus. Vivamus mollis ipsum quis mauris convallis pretium vel ac nisi.</p>
-		<p>Phasellus porttitor, felis eu tempor congue, magna sapien rhoncus leo, id convallis justo elit fermentum eros. 
-		Mauris volutpat pharetra arcu, at viverra velit mollis eget. Morbi enim ipsum, pellentesque rutrum ultricies sed, pulvinar ut neque. 
-		Donec vestibulum enim eget urna accumsan sodales. </p>
-	</div>
+    <div class="abouttitle">
+        <h2>
+            about&nbsp; me
+        </h2>
+    </div>
+    <div class="aboutcontent">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam orci risus, volutpat et aliquam non, adipiscing vel velit. Sed dignissim lorem id eros tincidunt nec egestas leo pellentesque. Vestibulum tempor magna id lacus sagittis at hendrerit mi dapibus. Cras cursus viverra arcu quis luctus. Vivamus mollis ipsum quis mauris convallis pretium vel ac nisi.
+        </p>
+        <p>
+            Phasellus porttitor, felis eu tempor congue, magna sapien rhoncus leo, id convallis justo elit fermentum eros. Mauris volutpat pharetra arcu, at viverra velit mollis eget. Morbi enim ipsum, pellentesque rutrum ultricies sed, pulvinar ut neque. Donec vestibulum enim eget urna accumsan sodales.
+        </p>
+    </div>
 </div>
 
 
 <div id="contact">
-	<div class="contacttitle">
-		<h2>contact &nbsp; me</h2>
-	</div>
-	<div class="contactcontent">
-		<p>Comments or questions are welcome.</p>
-
-		<p>Amber van de Velde<br>
-		Vergierdeweg 93<br>
-		2026 ZA Haarlem</p>
-	
-		<p>phone: 06 18 67 54 63</p>
-	</div>
+    <div class="contacttitle">
+        <h2>
+            contact &nbsp; me
+        </h2>
+    </div>
+    <div class="contactcontent">
+        <p>
+            Comments or questions are welcome.
+        </p>
+        <p>
+            Amber van de Velde<br>
+            Vergierdeweg 93<br>
+            2026 ZA Haarlem
+        </p>
+        <p>
+            phone: 06 18 67 54 63
+        </p>
+    </div>
 </div>
+
 
 <div id="content">
-	<ul id="concept">
-		<li class="amber1"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><a class="thumb" data-imagefade="images/1.jpg"></a></li>
-		<li class="amber5"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber11"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-	</ul>
-	<ul id="graphicdesign">
-		<li class="amber14"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber17"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p><h4>5 pictures</h4></div><div class="thumb"></div></li>
-		<li class="amber22"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber29"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber33"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber35"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber37"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber40"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber44"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-	</ul>
-	<ul id="campaign">
-		<li class="amber47"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-	</ul>
-	<ul id="photography">
-		<li class="amber55555"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber57"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber59"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-	    <li class="amber63"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber66"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-		<li class="amber69"><div class="menu-description"><h3>Titel</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.</p></div><div class="thumb"></div></li>
-	</ul>
+    <ul id="concept">
+        <li class="amber1">
+            <div class="menu-description">
+                <h3>
+                    ADVERTISING SKETCH
+                </h3>
+                <p>
+                    Peijnenburg / Breakfast / Dreft / Lange vingers / Katja / Haribo / Robijn / Page / Go Pro / etc.. <!-- Sigma / Canon / Rabobank -->
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a class="thumb" data-imagefade="images/1.jpg"></a>
+        </li>
+        <li class="amber5">
+            <div class="menu-description">
+                <h3>
+                    ADVERTISING
+                </h3>
+                <p>
+                    Langnese / Smiths / Dreft / Viagra / Philips
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber11">
+            <div class="menu-description">
+                <h3>
+                    POSTER DESIGN
+                </h3>
+                <p>
+                    ‘Nederland schreeuwt om cultuur’. The Dutch government is cutting back on art and culture. <!-- This poster gives the message that must be seen in perspective. Art and culture are among the foundations of our society.-->
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+    </ul>
+    <ul id="graphicdesign">
+        <li class="amber14">
+            <div class="menu-description">
+                <h3>
+                    WEBSHOP DESIGN 
+                </h3>
+                <p>
+                    Gaaf woonoutlet
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber17">
+            <div class="menu-description">
+                <h3>
+                    PACKAGING DESIGN
+                </h3>
+                <p>
+                    This is a redesign of an old album cover by Belle Perez.
+                </p>
+                <h4>
+                    5 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber22">
+            <div class="menu-description">
+                <h3>
+                    PACKAGING DESIGN
+                </h3>
+                <p>
+                    This CD cover and booklet are made for the Dutch singer Caro Emerald.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber29">
+            <div class="menu-description">
+                <h3>
+                    CURRICULUM DESIGN
+                    
+                </h3>
+                <p>
+                    I have been teaching High School students from various grades using powerpoint.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber33">
+            <div class="menu-description">
+                <h3>
+                    READER DESIGN
+                </h3>
+                <p>
+                    For a graduating class, I designed a reader. The content reflects the examination of that year.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber35">
+            <div class="menu-description">
+                <h3>
+                    PACKAGING DESIGN
+                </h3>
+                <p>
+                    I designed a new candybar named ‘Cocobonne’ for a school project.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber37">
+            <div class="menu-description">
+                <h3>
+                    RETAIL FOLDER
+                </h3>
+                <p>
+                    Techniques: photo editing, layout and styling.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber40">
+            <div class="menu-description">
+                <h3>
+                    TYPOGRAPHY
+                </h3>
+                <p>
+                    Different print projects on typography: holiday diary, a magazine etc.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber44">
+            <div class="menu-description">
+                <h3>
+                    IDENTITY
+                </h3>
+                <p>
+                    Logo design, corporate design, business cards, stationery.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+    </ul>
+    <ul id="campaign">
+        <li class="amber47">
+            <div class="menu-description">
+                <h3>
+                    SURVIVOR FESTIVAL
+                </h3>
+                <p>
+                    Full art-direction for a fictional festival: promotion, design and concepting.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+    </ul>
+    <ul id="photography">
+        <li class="amber55555">
+            <div class="menu-description">
+                <h3>
+                    Titel
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber57">
+            <div class="menu-description">
+                <h3>
+                    Titel
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber59">
+            <div class="menu-description">
+                <h3>
+                    Titel
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber63">
+            <div class="menu-description">
+                <h3>
+                    Titel
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber66">
+            <div class="menu-description">
+                <h3>
+                    Titel
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+        <li class="amber69">
+            <div class="menu-description">
+                <h3>
+                    Titel
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi malesuada, ante at feugiat tincidunt.
+                </p>
+                <h4>
+                    3 pictures
+                </h4>
+            </div><a href="page/1/" class="thumb" data-imagefade="images/.jpg"></a>
+        </li>
+    </ul>
 </div>
+
 
 
 <div id="menu">
-	<div id="rollout"></div>
-	<div id="homebutton"><p><img src="images/logo-amber.png" border="0" alt="Portfolio Amber van de Velde"></p></div>
-	
-	<ul id="home">
-		<li id="portfoliobutton"><p>portfolio</p></li>
-		<li id="aboutbutton"><p>about me</p></li>
-		<li id="contactbutton"><p>contact</p></li>
-	</ul>
-	<ul id="portfolio">
-		<li id="conceptbutton"><p>concept</p></li>
-		<li id="graphicdesignbutton"><p>graphic design</p></li>
-		<li id="campaignbutton"><p>campaign</p></li>
-		<li id="photographybutton"><p>photography</p></li>
-	</ul>
-	
+    <div id="rollout"></div>
+    <div id="homebutton">
+        <p>
+            <img src="images/logo-amber.png" border="0" alt="Portfolio Amber van de Velde">
+        </p>
+    </div>
+    <ul id="home">
+        <li id="portfoliobutton">
+            <p>
+                portfolio
+            </p>
+        </li>
+        <li id="aboutbutton">
+            <p>
+                about me
+            </p>
+        </li>
+        <li id="contactbutton">
+            <p>
+                contact
+            </p>
+        </li>
+    </ul>
+    <ul id="portfolio">
+        <li id="conceptbutton">
+            <p>
+                concept
+            </p>
+        </li>
+        <li id="graphicdesignbutton">
+            <p>
+                graphic design
+            </p>
+        </li>
+        <li id="campaignbutton">
+            <p>
+                campaign
+            </p>
+        </li>
+        <li id="photographybutton">
+            <p>
+                photography
+            </p>
+        </li>
+    </ul>
 </div>
+
 
 
 <div id="loader"></div>
